# internal/server/grpc.go
@@ -12,7 +12,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *service.ResourceService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *service.ResourceService, comment *service.CommentService, announcement *service.AnnouncementService, metricsService *service.MetricsService, adsense *service.AdsenseService, douban *service.DoubanService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -30,5 +30,10 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, resource *se
 	srv := grpc.NewServer(opts...)
 	v1.RegisterGreeterServer(srv, greeter)
 	ets.RegisterResourceServer(srv, resource)
+	ets.RegisterCommentServer(srv, comment)
+	ets.RegisterAnnouncementServer(srv, announcement)
+	ets.RegisterMetricsServer(srv, metricsService)
+	ets.RegisterAdsenseServer(srv, adsense)
+	ets.RegisterDoubanServer(srv, douban)
 	return srv
 }
