# openapi.yaml
@@ -3,9 +3,59 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: Resource API
     version: 0.0.1
 paths:
+    /api/resource:
+        get:
+            tags:
+                - Resource
+            operationId: Resource_GetResource
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetResourceReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/resource/search:
+        get:
+            tags:
+                - Resource
+            operationId: Resource_SearchResource
+            parameters:
+                - name: keyword
+                  in: query
+                  schema:
+                    type: string
+                - name: type
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SearchResourceReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/top:
         get:
             tags:
@@ -17,34 +67,65 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.yyets.v1.TopResourceReply'
-    /helloworld/{name}:
-        get:
-            tags:
-                - Greeter
-            description: Sends a greeting
-            operationId: Greeter_SayHello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
+                                $ref: '#/components/schemas/TopResourceReply'
+                default:
+                    description: Default error response
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
-        api.yyets.v1.ResourceData:
+        GetResourceReply:
+            type: object
+            properties:
+                id:
+                    type: string
+                cnname:
+                    type: string
+                enname:
+                    type: string
+                aliasname:
+                    type: string
+                area:
+                    type: string
+                views:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/ResourceData'
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ResourceClass:
+            type: object
+            properties:
+                ALL:
+                    type: object
+                    additionalProperties:
+                        type: string
+                JP:
+                    type: string
+                US:
+                    type: string
+                UK:
+                    type: string
+                KR:
+                    type: string
+        ResourceData:
             type: object
             properties:
                 info:
-                    $ref: '#/components/schemas/api.yyets.v1.ResourceDataInfo'
-        api.yyets.v1.ResourceDataInfo:
+                    $ref: '#/components/schemas/ResourceDataInfo'
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ResourceSeason'
+        ResourceDataInfo:
             type: object
             properties:
                 id:
@@ -71,40 +152,142 @@ components:
                     type: array
                     items:
                         type: string
-        api.yyets.v1.TopResourceReply:
+        ResourceFile:
             type: object
             properties:
-                All:
+                way:
+                    type: string
+                wayCn:
+                    type: string
+                address:
+                    type: string
+                passwd:
+                    type: string
+        ResourceItem:
+            type: object
+            properties:
+                data:
+                    $ref: '#/components/schemas/ResourceData'
+        ResourceSeason:
+            type: object
+            properties:
+                seasonNum:
+                    type: string
+                seasonCn:
+                    type: string
+                items:
+                    type: object
+                    additionalProperties:
+                        $ref: '#/components/schemas/ResourceSeasonList'
+                formats:
                     type: array
                     items:
-                        $ref: '#/components/schemas/api.yyets.v1.ResourceData'
+                        type: string
+        ResourceSeasonItem:
+            type: object
+            properties:
+                itemId:
+                    type: string
+                episode:
+                    type: string
+                name:
+                    type: string
+                size:
+                    type: string
+                yyetsTrans:
+                    type: string
+                dateline:
+                    type: string
+                files:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ResourceFile'
+        ResourceSeasonList:
+            type: object
+            properties:
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ResourceSeasonItem'
+        SearchComment:
+            type: object
+            properties:
+                username:
+                    type: string
+                date:
+                    type: string
+                comment:
+                    type: string
+                commentID:
+                    type: string
+                resourceID:
+                    type: string
+                resourceName:
+                    type: string
+                origin:
+                    type: string
+                hasAvatar:
+                    type: boolean
+                hash:
+                    type: string
+        SearchResourceReply:
+            type: object
+            properties:
+                resource:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ResourceDataInfo'
+                comment:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/SearchComment'
+                subtitle:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/SearchSubtitle'
+        SearchSubtitle:
+            type: object
+            properties: {}
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        TopResourceReply:
+            type: object
+            properties:
+                ALL:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ResourceItem'
                 US:
                     type: array
                     items:
-                        $ref: '#/components/schemas/api.yyets.v1.ResourceData'
+                        $ref: '#/components/schemas/ResourceItem'
                 JP:
                     type: array
                     items:
-                        $ref: '#/components/schemas/api.yyets.v1.ResourceData'
+                        $ref: '#/components/schemas/ResourceItem'
                 KR:
                     type: array
                     items:
-                        $ref: '#/components/schemas/api.yyets.v1.ResourceData'
+                        $ref: '#/components/schemas/ResourceItem'
                 UK:
                     type: array
                     items:
-                        $ref: '#/components/schemas/api.yyets.v1.ResourceData'
-                Class:
-                    type: object
-                    additionalProperties:
-                        type: string
-        helloworld.v1.HelloReply:
-            type: object
-            properties:
-                message:
-                    type: string
-            description: The response message containing the greetings
+                        $ref: '#/components/schemas/ResourceItem'
+                class:
+                    $ref: '#/components/schemas/ResourceClass'
 tags:
-    - name: Greeter
-      description: The greeting service definition.
     - name: Resource
